--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
-}
+  }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
@@ -28,6 +28,8 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    width: 200%;
+
 }
 
 /* Links inside the dropdown */
